# byte

./: .envrc  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DESIGN.md  Justfile  README.md  devenv.nix  devenv.yaml  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.omp/commands/: speckit.clarify.md  speckit.plan.md  speckit.specify.md
.pi/prompts/: speckit.constitution.md  speckit.implement.md  speckit.tasks.md
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: omp.manifest.json  pi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/desktop/: .prettierignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.tsx  CompactionEntry.tsx  ConnectionDialog.tsx  MarkdownMessage.test.tsx  MarkdownMessage.tsx  ToolCallCard.test.tsx  ToolCallCard.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/store/: index.ts  initialState.ts  reducer.test.ts  reducer.ts  selectors.test.ts  selectors.ts  types.ts  useByteStore.ts
crates/byte-core/: Cargo.toml
crates/byte-core/src/: activate_skill.rs  compaction.rs  event_bus.rs  lib.rs  llm_context.rs  prompt.rs  runner.rs  runner_pool.rs  runtime_services.rs  session_manager.rs  session_view_repository.rs
crates/byte-core/src/session/: active_path.rs  budget.rs  mod.rs
crates/byte-daemon/: Cargo.toml
crates/byte-daemon/src/: main.rs  rpc.rs
crates/byte-daemon/tests/: stdio_json_rpc.rs  unix_socket_json_rpc.rs  websocket_json_rpc.rs
crates/byte-models/: Cargo.toml
crates/byte-models/src/: config.rs  lib.rs  openai.rs  provider.rs  provider_factory.rs
crates/byte-protocol/: Cargo.toml
crates/byte-protocol/src/: daemon_address.rs  lib.rs  session.rs
crates/byte-session/: Cargo.toml
crates/byte-session/src/: lib.rs  persistence.rs  tree.rs
crates/byte-session/tests/: persistence_tests.rs
crates/byte-skills/: Cargo.toml
crates/byte-skills/src/: lib.rs
crates/byte-tools/: Cargo.toml
crates/byte-tools/src/: apply_patch.rs  diff.rs  find_files.rs  grep.rs  lib.rs  list_directory.rs  read_file.rs  registry.rs  run_command.rs  write_file.rs
docs/adr/: 0001-use-local-daemon-for-agent-runtime.md  0002-use-stdio-json-rpc-between-shell-and-daemon.md  0003-use-runtime-event-stream-without-event-sourcing.md  0004-use-unrestricted-local-agent-mode-for-mvp.md  0005-store-sessions-as-jsonl-trees.md  0006-store-compaction-as-visible-session-entries.md  0007-store-mvp-secrets-in-plaintext-config.md  0008-use-unix-socket-json-rpc-between-shell-and-daemon.md  0009-extract-byte-core-session-runner.md  0010-run-cancelled-event-protocol.md  0011-split-tools-skills-registries.md  0012-bind-every-session-to-a-code-workspace.md  0013-tool-lifecycle-three-states.md  0014-manual-start-daemon-websocket-json-rpc.md  0015-use-devenv-for-development-environment.md  0016-remove-secretstore-seam.md  0017-split-session-store-and-view-repository.md  0018-persist-activated-skills-and-runner-pool.md  0019-unified-tool-stream.md  0020-cancellation-partial-message-semantics.md  0021-static-system-prompt-skill-message-injection.md
docs/agents/: domain.md  issue-tracker.md
docs/architecture/: mvp-architecture.md
docs/desktop/: ui-guidelines.md
docs/models/: configuration.md
docs/operations/: commands.md
docs/protocol/: glossary.md
examples/: check_block.rs
specs/001-core-coding-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-coding-loop/checklists/: requirements.md
specs/001-core-coding-loop/contracts/: cancellation.md  loop.md
specs/002-auto-compaction-entry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auto-compaction-entry/checklists/: requirements.md
specs/002-auto-compaction-entry/contracts/: protocol-types.md  runtime-events.md  ui-contract.md
