[workspace]
members = [
  "crates/byte-protocol",
  "crates/byte-core",
  "crates/byte-session",
  "crates/byte-daemon",
  "crates/byte-models",
]
exclude = ["apps/desktop/src-tauri"]
resolver = "2"
[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
byte-protocol = { path = "crates/byte-protocol" }
byte-core = { path = "crates/byte-core" }
byte-models = { path = "crates/byte-models" }
futures = "0.3.32"
tempfile = "3"
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }
byte-session = { path = "crates/byte-session" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
] }