[workspace]
members = [
    "crates/byte-protocol",
    "crates/byte-core",
    "crates/byte-session",
    "crates/byte-daemon",
    "crates/byte-models",
    "crates/byte-tools",
    "apps/desktop/src-tauri",
]
resolver = "2"
[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
byte-protocol = { path = "crates/byte-protocol" }
byte-core = { path = "crates/byte-core" }
byte-models = { path = "crates/byte-models" }
byte-tools = { path = "crates/byte-tools" }
futures = "0.3.32"
tempfile = "3"
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }
byte-session = { path = "crates/byte-session" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
] }


[workspace.lints.clippy]

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

must_use_candidate = "allow"
missing_errors_doc = "allow"
