[workspace]
members = [
    "crates/byte-protocol",
    "crates/byte-core",
    "crates/byte-session",
    "crates/byte-daemon",
    "crates/byte-models",
    "crates/byte-tools",
    "crates/byte-skills",
    "apps/desktop/src-tauri",
]
resolver = "2"
[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
byte-protocol = { path = "crates/byte-protocol" }
byte-core = { path = "crates/byte-core" }
byte-models = { path = "crates/byte-models" }
byte-tools = { path = "crates/byte-tools" }
futures = "0.3.32"
tempfile = "3"
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }
byte-session = { path = "crates/byte-session" }
byte-skills = { path = "crates/byte-skills" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"


missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

missing_const_for_fn = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
unnecessary_wraps = "deny"
unused_self = "deny"
use_self = "deny"

unwrap_used = "warn"
expect_used = "warn"
todo = "deny"
unreachable = "deny"

all = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
