[package]
name = "byte-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
byte-protocol.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
