[package]
name = "byte-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
byte-models.workspace = true
byte-protocol.workspace = true
byte-session.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
