[package]
name = "byte-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
byte-models = { version = "0.1.0", path = "../byte-models" }
byte-session.workspace = true
byte-protocol.workspace = true
futures = { version = "0.3.32", default-features = false, features = ["std"] }
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
uuid = { version = "1.23.3", features = ["v4"] }
scopeguard = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
