[package]
name = "byte-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byte-core.workspace = true
byte-models.workspace = true
byte-session.workspace = true
byte-protocol.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
uuid = { version = "1.23.3", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
