[package]
name = "byte-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byte-core.workspace = true
byte-models.workspace = true
byte-session.workspace = true
byte-protocol.workspace = true
byte-skills.workspace = true
byte-tools.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio-tungstenite = "0.26"
tokio.workspace = true
uuid.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tungstenite = "0.26"

[lints]
workspace = true
