[package]
name = "byte-models"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-openai = { version = "0.41.1", default-features = false, features = ["chat-completion", "rustls"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
byte-protocol = { version = "0.1.0", path = "../byte-protocol" }
futures = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "macros", "time"] }
toml = "1.1.2"
uuid = { version = "1.23.3", features = ["v4"] }
