[package]
name = "byte-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ts-rs = { version = "12.0", default-features = false, features = ["serde-json-impl"] }

[lints]
workspace = true