[package]
name = "byte-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
byte-protocol.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros"] }
tokio-util = "0.7"
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
