[package]
name = "byte-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
byte-protocol.workspace = true
glob = "0.3"
regex = "1"
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "time"] }
tokio-util = "0.7"
tracing.workspace = true
uuid.workspace = true
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
